# Rust

./: README.md
Web/Actix_mySQL Youtube/: .env  Cargo.toml
Web/Actix_mySQL Youtube/src/: api.rs  main.rs  utils.rs
Web/actix-web/src/: main.rs
Web/actix-web/src/api/: MyData.rs
actix-web/src/api/: MyData.rs
bevy/first_Game/: Cargo.toml
bevy/first_Game/src/: components.rs  enemy.rs  main.rs  player.rs
bevy/first_bevy/: Cargo.toml
bevy/first_bevy/src/: main.rs
rust_action/: README.md
rust_action/ch_1/CSV/src/: main.rs
rust_action/ch_1/FIle/: Cargo.toml  readme.md
rust_action/ch_1/FIle/src/: main.rs
rust_action/ch_1/Regex/: Cargo.toml
rust_action/ch_1/Regex/src/: main.rs
rust_action/ch_1/Vec/src/: main.rs
rust_action/ch_1/data_memory/: Cargo.toml
rust_action/ch_1/data_memory/src/: main.rs
rust_action/ch_2/impl_File/: Cargo.toml
rust_action/ch_2/impl_File/src/: main.rs
rust_action/ch_2/normal_unused/: Cargo.toml
rust_action/ch_2/normal_unused/src/: main.rs
rust_action/ch_2/struct_1/src/: main.rs
rust_action/ch_2/trait_test/src/: main.rs
rust_action/ch_3/: README.md
rust_action/ch_3/copy_clone/: readme.md
rust_action/ch_3/copy_clone/src/: main.rs
rust_action/ch_3/easy_ownership/: Cargo.toml
rust_action/ch_3/easy_ownership/src/: main.rs
rust_action/ch_3/reference_ownership/: Cargo.toml
rust_action/ch_8/reqwest/: Cargo.toml
rust_action/ch_8/simple_TCp/: Cargo.toml
rust_action/ch_8/simple_rpg_game/: Cargo.toml
snake_game/: Cargo.toml  README.md
snake_game/src/: lib.rs  random.rs
(+4 files in other folders)
