[package]
name = "actix_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-rt = "*"
dotenv = "0.15"
config = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
mysql = "*"
log = "0.4.8"
log4rs = "0.12.0"