[package]
name = "first_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
# 동적 연결을 활성화 함으로써 컴파일 시간 감소

[workspace]
resolver = "2"

# for optimization

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3